[gd_scene load_steps=4 format=3 uid="uid://jrtmy6ey2ycv"]

[ext_resource type="Script" path="res://Scripts/TitleScreen.gd" id="1_327dm"]
[ext_resource type="Texture2D" uid="uid://h7anyg1edt8f" path="res://Textures/tex_title.png" id="1_d0jck"]
[ext_resource type="AudioStream" uid="uid://oi0fv4xn80sb" path="res://Sounds/sound_duck1.ogg" id="4_tfudw"]

[node name="Title" type="Control" node_paths=PackedStringArray("title_tex", "bg_cover", "about_popup", "question_select", "version_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_327dm")
title_tex = NodePath("HBoxContainer/VBoxContainer/Control/TextureRect")
bg_cover = NodePath("BGCover")
about_popup = NodePath("About")
question_select = NodePath("HBoxContainer/MarginContainer/VBoxContainer/QuestionSelect")
version_label = NodePath("HBoxContainer/VBoxContainer/MarginContainer/Label")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -382.5
offset_top = -292.5
offset_right = 382.5
offset_bottom = 292.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(382, 292)
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_d0jck")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_bottom = 32

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Start" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="QuestionSelect" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Question Select"

[node name="About" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "About"

[node name="Settings" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Quit" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="BGCover" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.501961, 0.501961, 0.501961, 0.501961)

[node name="About" type="AcceptDialog" parent="."]
title = "About"
initial_position = 2
size = Vector2i(500, 300)

[node name="ScrollContainer" type="ScrollContainer" parent="About"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="About/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="About/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Welcome to the latest entry in the \"Rixi Makes an ASMT-Themed Game Based On Some Trend or Hyperfixation From That Year\" series!  (We're workshopping the title.)

How well do you know the ASMT/Superb Demo series?  I got into watching ZaneGames' Powerpoint board games and game shows earlier this year, so I threw together a single-player Jeopardy game and asked folks in the talkhaus, spotzone, and ASMT server to come up with questions for it.  Hope you enjoy it!
 "
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="About/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="About/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]
CREDITS:

Main developer, background and logo art:
Rixitic

Questions by:
camwoodstock & Tori
FusionWarrior
MilkandRaspberry
MonkeyShrapnel
Neniu
oddwrath
Owen Lee
PSI Ninja
Rixitic
SAJewers
SiFi270

Sound effect sources (Freesound.org):
Slide Whistle (by sheepfilms)
drumroll.wav (by adriann)
Ente, Duck (by noetzli)
Shotgun Blast 1 (by magnuswaker)
357Mag.wav (by Jon285)
tongue click.wav (by MichellePamelaLyons)
Auto Cannon 1 (by SamsterBirdies)
whack02.mp3 (by Qat)

Sound effect sources (other):
Soniss GDC Audio Bundles
Kenney's UI Audio pack

Plugins used:
Kenney UI Audio (by Calinou)
Maaack's UI Sound Controller (by Maaack)
GameGUI (by brombres)
Extra GUI Controls - Drag and Drop, Radial Menus, Containers, Utilities (by don-tnowe)

Playtester(s):
Your name(s) here

Special thanks:
raocow

Shout-outs:
ZaneGames
Microsoft Powerpoint and Windows Movie Maker
Cassette Beasts
raocow again



In loving memory of Sadie Erickson,
who we had to say farewell to on
November 19, 2024.
A sweet, loyal, and clever canine,
she trained me and my family well.
[/center]"
fit_content = true
scroll_active = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Duck" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tfudw")
autoplay = true

[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/QuestionSelect" to="." method="_on_question_select_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="confirmed" from="About" to="." method="_on_about_confirmed"]
